<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        android:icon="@mipmap/ic_action_search"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        android:icon="@mipmap/ic_action_sort"
        android:visible="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_garbage_box"
        android:orderInCategory="100"
        android:title="@string/empty_garbage_box"
        android:icon="@mipmap/ic_nav_delete_on"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@mipmap/ic_action_settings"
        android:visible="true"
        app:showAsAction="always"/>

</menu>