<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="?android:attr/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:background="?attr/colorPrimary">

            <TextView
                android:id="@+id/mojiSizeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/mojiSize"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:background="?android:attr/colorBackground">

            <LinearLayout
                android:id="@+id/mojiSizeSettingNum0"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/selectMojiSizeImgNum0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_check"
                    android:tint="?attr/colorAccent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/mojiSizeTitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/small"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mojiSizeSettingNum1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/selectMojiSizeImgNum1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_check"
                    android:tint="?attr/colorAccent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/mojiSizeTitleDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultStr"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mojiSizeSettingNum2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/selectMojiSizeImgNum2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_check"
                    android:tint="?attr/colorAccent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="24dp"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/mojiSizeTitleBig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/big"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:gravity="bottom|end"
                android:background="?android:attr/selectableItemBackground">

                <TextView
                    android:id="@+id/closeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginEnd="16dp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorPrimary"
                    android:text="@string/close"
                    android:textSize="14sp"
                    android:background="?android:attr/selectableItemBackground"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>