<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/copyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_copy"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:gravity="start"
                android:text="@string/copy"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/restoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_restore_black"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:gravity="start"
                android:text="@string/restore"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/saveAsImgButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_save_as_img"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:gravity="start"
                android:text="@string/save_as_image"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

