<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="?android:attr/colorBackground"
        android:fitsSystemWindows="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/navAllMemo"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/allMemoImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@mipmap/ic_nav_report_off"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/allMemoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:text="@string/all_memo"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/navFavorite"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:orientation="horizontal"
                android:layout_marginTop="2dp">

                <ImageView
                    android:id="@+id/favoriteImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@mipmap/ic_nav_favorite_off"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/favoriteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    android:text="@string/favorite"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/navDelete"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:orientation="horizontal"
                android:layout_marginTop="2dp">

                <ImageView
                    android:id="@+id/deleteImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:src="@mipmap/ic_nav_delete_off"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/deleteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:text="@string/garbage_box"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
